--- a/project1/project_1.tex
+++ b/project1/project_1.tex
@@ -86,7 +86,7 @@
     
 \section*{Problem 1}
 
-\subsection*{Problem a}
+%\subsection*{Problem a}
 We have the one-dimensional Poisson equation
 \begin{equation}\label{eq:one-dimensional Poisson}
     - \frac{d^2u}{dx^2} = f(x)
@@ -105,8 +105,8 @@ where $u(x)$ is an exact solution to Eq. (1). We can analytically check this by 
 \end{equation*}
 
 
-\subsection*{Problem b}
-Write a solution for problem 1b here.
+%\subsection*{Problem b}
+%Write a solution for problem 1b here.
 
 \section*{Problem 2}
 We write equations using the LaTeX \texttt{equation} (or \texttt{align}) environments. Here is an equation with numbering
