--- a/project1/project_1.tex
+++ b/project1/project_1.tex
@@ -108,41 +108,57 @@ where $u(x)$ is an exact solution to Eq. (1). We can analytically check this by 
 %\subsection*{Problem b}
 %Write a solution for problem 1b here.
 
-\section*{Problem 2}
-We write equations using the LaTeX \texttt{equation} (or \texttt{align}) environments. Here is an equation with numbering
-\begin{equation}\label{eq:newton}
-    \vb{F} = \dv{\vb{p}}{t},
-\end{equation}
-and here is one without numbering:
-\begin{equation*}
-\oint_C \vb{F}\cdot \dd \vb{r} = 0.
-\end{equation*}
-Sometimes it is useful to refer back to a previous equation, like we're demonstrating here for equation \ref{eq:newton}.
+$-\frac{d^2u(x)}{dx^2} = f(x)$
 
-We can include figures using the \texttt{figure} environment. Whenever we include a figure or table, we \textit{must} make sure to actually refer to it in the main text, e.g.\ something like this: ``In figure \ref{fig:rel_err} we show \ldots''. 
-\begin{figure}%[h!]
-    \centering %Centers the figure
-    %\includegraphics[scale=0.55]{imgs/rel_err.pdf} %Imports the figure.
-    \caption{Write a descriptive caption here that explains the content of the figure. Note the font size for the axis labels and ticks --- the size should approximately match the document font size.}
-    \label{fig:rel_err}
-\end{figure}
-Also, note the LaTeX code we used to get correct quotation marks in the previous sentence. (Simply using the \texttt{"} key on your keyboard will give the wrong result.) Figures should preferably be vector graphics (e.g.\ a \texttt{.pdf} file) rather than raster graphics (e.g.\ a \texttt{.png} file).
+$ x \in \left[0, 1 \right] $
 
-By the way, don't worry too much about where LaTeX decides to place your figures and tables --- LaTeX knows more than we do about proper document layout. As long as you label all your figures and tables and refer to them in the text, it's all good. Of course, in some cases it can be worth trying to force a specific placement, to avoid the figure/table appearing many pages away from the main text discussing it, but this isn't something you should spend time on until the very end of the writing process.
+$i = 0,1,\dots,n$
+
+$h = \frac{x_{max} - x_{min}}{n} $
+
+$ x \rarr x_i$
+
+$x_i = x_0 + ih$
+
+We're using the three point formula to find the second derivative, $-\frac{u_{i-1} -2 u_i + u_{i+1}}{h^2} = f_i = f(x_i)$ 
+
+$v_i \approx u_i$ $\implies -\frac{v_{i-1} -2 v_i + v_{i+1}}{h^2} = \frac{-v_{i-1} + 2 v_i - v_{i+1}}{h^2} = f_i, f_i = f(x_i)$, for $i \in [1, n-1]$
 
 
-Next up is a table, created using the \texttt{table} and \texttt{tabular} environments. We refer to it by table \ref{tab:output_table}.
-\begin{table}%[h!]
-    \centering
-    \begin{tabular}{c@{\hspace{1cm}} c}
-        \hline
-        Number of points & Output \\
-        \hline
-        10 &  0.3086\\
-        100 &  0.2550\\
-        \hline
-    \end{tabular}\caption{Write a descriptive caption here, explaining the content of your table.}\label{tab:output_table}
-\end{table}
+
+---
+
+
+
+$v_i = f_i$ is a set of equations for every $i$. By multiplying every line with $h^2$ we get this
+$$
+\begin{matrix}
+	-v_0 & 2v_1 & -v_2  &           & = h^2f_i \\
+	& -v_1 &  2v_2 & - v_3 & = h^2f_2 \\
+\end{matrix}
+$$
+and so on and so forth. We know $v_0 = v_n = 0$, so we remove those. This can then be easily rewritten as a matrix equation $A\vec{v} = \vec{g}$
+$$
+\begin{bmatrix}
+	2  & -1 & 0  & 0  & \dots & 0 & 0 & \\
+	-1 &  2 & -1 & 0  & \dots & 0 & 0 \\
+	0  & -1 & 2  & -1 & \dots & 0 & 0 \\
+	\vdots & \vdots & \ddots & \ddots & \ddots & \vdots & \vdots \\
+	0 & 0 & \dots &-1 & 2 & -1 & 0 \\
+	0 & 0 & \dots & 0 & -1 & 2  & -1 \\
+	0 & 0 & \dots & 0 & 0 & -1 & 2
+	
+\end{bmatrix}
+\begin{bmatrix}
+	v_1 \\ v_2 \\ v_3 \\ \vdots \\ v_{n-3} \\v_{n-2} \\ v_{n-1}
+\end{bmatrix}
+=
+\begin{bmatrix}
+	g_1 \\ g_2 \\ g_3 \\ \vdots \\ g{n-3} \\ g{n-2} \\ g_{n-1}
+\end{bmatrix}
+$$
+$g_i$ is $h^2f_i $
+
 
 Finally, we can list algorithms by using the \texttt{algorithm} environment, as demonstrated here for algorithm \ref{algo:midpoint_rule}.
 \begin{algorithm}[H]
