--- a/project2/project2.tex
+++ b/project2/project2.tex
@@ -125,6 +125,19 @@ Now we can use $\lambda = \frac{FL^2}{\gamma}$ and we easily see that we get (\r
 
 \section*{Problem 2 - Jacobi’s rotation algorithm}
 
+From the assignment we have:
+
+\begin{itemize}
+    \item $\vec{v}_i$ is a set of orthonormal basis vectors: $\vec{v}_i^T \cdot \vec{v}_i = \delta_{ij}$
+    \item $\mathbf{U}$ is an orthogonal transformation matrix: $\mathbf{U}^T = \mathbf{U}^{-1}$
+\end{itemize}
+
+From this we can show that tansformations with $\mathbf{U}$ preserves orthonormality, i.e. that $\vec{w}_i = \mathbf{U} \vec{v}_i$ will also be an orthonormal set:
+
+\begin{equation*}
+    \vec{w}_i^T \cdot \vec{w}_j = (\mathbf{U}\vec{v}_i)^T (\mathbf{U} \vec{v}_j) = \vec{v}_i^T \mathbf{U}^T \mathbf{U} \vec{v}_j = \vec{v}_i^T \mathbf{U}^{-1} \mathbf{U} \vec{v}_j 
+    = \vec{v}_i^T  \mathbf{I} \vec{v}_j = \vec{v}_i^T  \cdot \vec{v}_j = \delta_{ij} \;\; \blacksquare
+\end{equation*}
 
 \section*{Problem 3 - The tridiagonal matrix $\bm{A}$}
    
