--- a/project2/project2.tex
+++ b/project2/project2.tex
@@ -139,8 +139,9 @@ From this we can show that tansformations with $\mathbf{U}$ preserves orthonorma
     = \vec{v}_i^T  \mathbf{I} \vec{v}_j = \vec{v}_i^T  \cdot \vec{v}_j = \delta_{ij} \;\; \blacksquare
 \end{equation*}
 
-\section*{Problem 3 - The tridiagonal matrix $\bm{A}$}
-   
+
+\section*{Problem 3 - The tridiagonal matrix $\mathbf{A}$}
+See 'triag.cpp' for code. 
 
 \section*{Problem 4 - Largest off-diagonal element}
 
