--- a/project2/project2.tex
+++ b/project2/project2.tex
@@ -146,9 +146,10 @@ See 'triag.cpp' for code.
 \section*{Problem 4 - Largest off-diagonal element}
 
 \subsection*{Problem a}
+See 'max\_offdiag\_symmetric()' in max\_offdiag\_symmetric.cpp.
 
 \subsection*{Problem b}
-
+See 'test\_max\_offdiag\_symmetric()' in max\_offdiag\_symmetric.cpp.
 
 \section*{Problem 5 - Implementation of Jacobi’s rotation }
 
