--- a/project2/project2.tex
+++ b/project2/project2.tex
@@ -141,29 +141,38 @@ From this we can show that tansformations with $\mathbf{U}$ preserves orthonorma
 
 
 \section*{Problem 3 - The tridiagonal matrix $\mathbf{A}$}
-See 'triag.cpp' for code. 
+See 'triag.cpp' for code and 'test\_triag.cpp' for test. 
 
 \section*{Problem 4 - Largest off-diagonal element}
 
 \subsection*{Problem a}
-See 'max\_offdiag\_symmetric()' in max\_offdiag\_symmetric.cpp.
+See 'max\_offdiag\_symmetric.cpp'.
 
 \subsection*{Problem b}
-See 'test\_max\_offdiag\_symmetric()' in max\_offdiag\_symmetric.cpp.
+See 'test\_max\_offdiag\_symmetric.cpp'.
 
 \section*{Problem 5 - Implementation of Jacobi’s rotation }
 
 \subsection*{Problem a}
+See 'jacobi\_eigensolver.cpp'.
 
 \subsection*{Problem b}
-
+See 'test\_jacobi\_eigensolver.cpp'.
 
 \section*{Problem 6 - Transformations}
 
 \subsection*{Problem a}
+See 'estimate\_rotations.cpp' and FIG \ref{transformations}.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.55]{plots/transformations.pdf} %Imports the figure.
+	\caption{Number of required transformations scale with the tridiagonal matrix of size N}
+	\label{transformations}
+\end{figure}
 
 \subsection*{Problem b}
-
+The scaling behavior we expect to see if $\mathbf{A}$ was a dense matrix is that insted of having a $\mathcal{O}(n^2)$ we have $\mathcal{O}(n^3)$.
 
 \section*{Problem 7 - Eigenvalue problem}
 
