--- a/project2/project2.tex
+++ b/project2/project2.tex
@@ -174,10 +174,27 @@ See 'estimate\_rotations.cpp' and FIG \ref{transformations}.
 \subsection*{Problem b}
 The scaling behavior we expect to see if $\mathbf{A}$ was a dense matrix is that insted of having a $\mathcal{O}(n^2)$ we have $\mathcal{O}(n^3)$.
 
+
 \section*{Problem 7 - Eigenvalue problem}
 
 \subsection*{Problem a}
+See 'solve\_diff.cpp' and FIG \ref{disc10}.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.55]{plots/discretization_n10.pdf} %Imports the figure.
+	\caption{Plot of the discrete eigenvectors the and corresponding analytical eigenvectors for N = 10}
+	\label{disc10}
+\end{figure}
 
 \subsection*{Problem b}
+See 'solve\_diff.cpp' and FIG \ref{disc100}.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.55]{plots/discretization_n100.pdf} %Imports the figure.
+	\caption{Plot of the discrete eigenvectors the and corresponding analytical eigenvectors for N = 100}
+	\label{disc100}
+\end{figure}
 
 \end{document}
