Bug fixes and some final touches. made makefile

--- a/project2/project2.tex
+++ b/project2/project2.tex
@@ -2,7 +2,6 @@
 %For preview: skriv i terminal: latexmk -pdf -pvc filnavn
 
 
-
 % if you want a single-column, remove reprint
 
 % allows special characters (including æøå)
@@ -141,7 +140,7 @@ From this we can show that tansformations with $\mathbf{U}$ preserves orthonorma
 
 
 \section*{Problem 3 - The tridiagonal matrix $\mathbf{A}$}
-See 'triag.cpp' for code and 'test\_triag.cpp' for test. 
+See 'tridiag.cpp' for code and 'test\_tridiag.cpp' for test. 
 
 \section*{Problem 4 - Largest off-diagonal element}
 
@@ -172,7 +171,7 @@ See 'estimate\_rotations.cpp' and FIG \ref{transformations}.
 \end{figure}
 
 \subsection*{Problem b}
-The scaling behavior we expect to see if $\mathbf{A}$ was a dense matrix is that insted of having a $\mathcal{O}(n^2)$ we have $\mathcal{O}(n^3)$.
+The scaling behavior we expect to see if $\mathbf{A}$ was a dense matrix is that instead of having a $\mathcal{O}(n^2)$ we would have $\mathcal{O}(n^3)$.
 
 
 \section*{Problem 7 - Eigenvalue problem}
